--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express":  "^4.21.2",
-    "nodemon":  "^3.1.9"
-    
-  }
+    "express": "^4.21.2",
+    "nodemon": "^3.1.9"
+  },
+  "keywords": [],
+  "type": "commonjs"
 }
