--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "demo",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "app/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
+    "start": "node app/app.js",
     "dev": "nodemon app.js"
   },
   "author": "",
